--- a/app/assets/stylesheets/mobile/_nav_primary.sass
+++ b/app/assets/stylesheets/mobile/_nav_primary.sass
@@ -40,11 +40,11 @@
   max-height: 352px
   +box-shadow(rgba(#000, 0.75) 0 2px 5px 0)
 
-  nav 
+  nav
     display: none
 
   ul
-    margin-bottom: 0  
+    margin-bottom: 0
 
   li
     list-style-type: none
@@ -84,50 +84,40 @@ article .nav_items
 
 #nav_mobile_home a.icon
   background:
-    image: image-url("m_nav_sprite.png")
+    image: image-url("nav-sprite.png")
     position: 12px 5px
 
 #nav_mobile_bible a.icon
   background:
-    image: image-url("m_nav_sprite.png")
-    position: 12px -52px
+    image: image-url("nav-sprite.png")
+    position: 12px -186px
 
 #nav_mobile_plans a.icon
   background:
-    image: image-url("m_nav_sprite.png")
-    position: 12px -163px
-
-#nav_mobile_notes a.icon
-  background:
-    image: image-url("m_nav_sprite.png")
-    position: 12px -220px
-
-#nav_mobile_bookmarks a.icon
-  background:
-    image: image-url("m_nav_sprite.png")
-    position: 12px -108px
+    image: image-url("nav-sprite.png")
+    position: 12px -378px
 
 #nav_mobile_friends a.icon
   background:
-    image: image-url("m_nav_sprite.png")
-    position: 12px -272px
+    image: image-url("nav-sprite.png")
+    position: 12px -1727px
 
 #nav_mobile_live a.icon
   background:
-    image: image-url("m_nav_sprite.png")
-    position: 12px -330px
+    image: image-url("nav-sprite.png")
+    position: 12px -1242px
 
 #nav_mobile_mobile a.icon
   background:
-    image: image-url("m_nav_sprite.png")
-    position: 12px -387px
+    image: image-url("nav-sprite.png")
+    position: 12px -1530px
 
 #nav_mobile_profile a.icon
   background:
-    image: image-url("m_nav_sprite.png")
-    position: 12px -554px
+    image: image-url("nav-sprite.png")
+    position: 12px -1339px
 
 #nav_mobile_videos a.icon
   background:
-    image: image-url("m_nav_sprite.png")
-    position: 12px -609px
+    image: image-url("nav-sprite.png")
+    position: 12px -666px
