--- a/app/assets/stylesheets/_nav_primary.sass
+++ b/app/assets/stylesheets/_nav_primary.sass
@@ -24,11 +24,11 @@
 
   .highlighted
     background-color: #111
+    background-repeat: no-repeat
 
   a.icon span
     background:
       repeat: no-repeat
-      position: 0 10px
     border-top: 1px solid rgba(#fff, 0.15)
     display: block
     font-size: 11px
@@ -39,11 +39,6 @@
     padding-top: 50px
     padding-bottom: 4px
 
-  a.icon span:hover,
-  li.highlighted a.icon span
-    background:
-      position: -60px 10px
-
   a.icon
     display: block
     text-decoration: none
@@ -53,39 +48,99 @@
 
 #nav_primary_home a.icon span
   background:
-    image: image-url("nav_home.png")
+    image: image-url("nav-sprite.png")
+    position: center -87px
 
 #nav_primary_bible a.icon span
   background:
-    image: image-url("nav_bible.png")
+    image: image-url("nav-sprite.png")
+    position: center -278px
 
 #nav_primary_plans a.icon span
   background:
-    image: image-url("nav_plans.png")
-
-#nav_primary_notes a.icon span
-  background:
-    image: image-url("nav_notes.png")
-
-#nav_primary_bookmarks a.icon span
-  background:
-    image: image-url("nav_bookmarks.png")
+    image: image-url("nav-sprite.png")
+    position: center -470px
 
 #nav_primary_friends a.icon span
   background:
-    image: image-url("nav_group.png")
+    image: image-url("nav-sprite.png")
+    position: center -1819px
 
 #nav_primary_live a.icon span
   background:
-    image: image-url("nav_live.png")
+    image: image-url("nav-sprite.png")
+    position: center -1238px
 
 #nav_primary_mobile a.icon span
   background:
-    image: image-url("nav_mobile.png")
+    image: image-url("nav-sprite.png")
+    position: center -1622px
 
 #nav_primary_videos a.icon span
   background:
-    image: image-url("nav_videos.png")
+    image: image-url("nav-sprite.png")
+    position: center -565px
+
+// !Hover
+
+#nav_primary_home a.icon span:hover
+  background:
+    position: center 9px
+
+#nav_primary_bible a.icon span:hover
+  background:
+    position: center -182px
+
+#nav_primary_plans a.icon span:hover
+  background:
+    position: center -374px
+
+#nav_primary_friends a.icon span:hover
+  background:
+    position: center -1723px
+
+#nav_primary_live a.icon span:hover
+  background:
+    position: center -1142px
+
+#nav_primary_mobile a.icon span:hover
+  background:
+    position: center -1526px
+
+#nav_primary_videos a.icon span:hover
+  background:
+    position: center -661px
+
+// !Highlighted
+
+.highlighted#nav_primary_home a.icon span
+  background:
+    position: center 9px
+
+.highlighted#nav_primary_bible a.icon span
+  background:
+    position: center -182px
+
+.highlighted#nav_primary_plans a.icon span
+  background:
+    position: center -374px
+
+.highlighted#nav_primary_friends a.icon span
+  background:
+    position: center -1723px
+
+.highlighted#nav_primary_live a.icon span
+  background:
+    position: center -1142px
+
+.highlighted#nav_primary_mobile a.icon span
+  background:
+    position: center -1526px
+
+.highlighted#nav_primary_videos a.icon span
+  background:
+    position: center -661px
+
 
 #nav_primary
 
