--- a/app/views/sidebars/subscriptions/_show.html.haml
+++ b/app/views/sidebars/subscriptions/_show.html.haml
@@ -6,7 +6,7 @@
   day           = presenter.day
   reading       = presenter.reading
   content_page  = presenter.content_page
-  references    = reading.references
+  references    = reading.references(version_id: subscription.version_id)
 
 .mobile#mobile-sb-subscription{class: ('initial' if presenter.initial_load?)}
   .reader_modal_header
@@ -14,12 +14,6 @@
       %a.close_btn.subscription_close_btn
     %nav.nav_right
       = link_to t("plan settings"), edit_user_subscription_path(current_user, plan_id: @plan.to_param), class: "settings_btn"
-
-.widget.widget-notice{style: "width:268px;"}
-  %p
-    = t("plans.sidebar notice")
-    %span.exit
-      = link_to(t("plans.exit"), shelf_user_subscription_path(current_user, subscription, content: content_page, day: day ), method: :post)
 
 #widget-plan-controls.widget
 
@@ -62,20 +56,20 @@
       - references.each_with_index do |ref,index|
         %li.content_target{class: (content_page == index) ? "active #{content_page}" : nil }
           = form_tag(user_subscription_path(current_user, subscription), method: :put) do
-            = hidden_field_tag(:ref,            ref.ref.to_usfm)
-            = hidden_field_tag(:completed,      (!ref.completed?).to_s)
+            = hidden_field_tag(:ref,            ref.reference)
+            = hidden_field_tag(:completed,      (!ref.completed))
             = hidden_field_tag(:version,        subscription.version_id)
             = hidden_field_tag(:day_target,     day.to_s)
             = hidden_field_tag(:content_target, index )     if index != 0
-            = check_box_tag(:completion, nil, ref.completed?, {id:"#{index}_box",onChange: "this.form.submit()"} )
+            = check_box_tag(:completion, nil, ref.completed, {id:"#{index}_box",onChange: "this.form.submit()"} )
 
           - if content_page == index
             %span
               %b.mobile= t("plans.read today").capitalize
-              = ref.ref.safe_human
+              = ref.reference.safe_human
           - else
             %a{href: (content_page == index) ? nil : user_subscription_path(current_user, subscription , day: day.to_s, content: (index > 0 ? index.to_s : nil), version: params[:version])}
-              = ref.ref.safe_human
+              = ref.reference.safe_human
 
 - if reading.devotional
   #widget-devotional.widget
