--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -308,6 +308,8 @@ article.profile
     right: 0
     background: image-url("friend-request-sprite.png") no-repeat center -128px #D30000
 
+  .friends-none
+    padding: 110px 0 0
 
 // !Blank slate pages
 
@@ -330,7 +332,7 @@ article.profile
       padding: 0
 
   .slate-activity
-    padding: 30px 40px 20px
+    padding: 120px 40px 20px
 
 
 // !Notifications
