Added class and importance to trigger proper padding for mobile slate-friends view.

--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -319,8 +319,9 @@ article.profile
   .slate-bookmarks,
   .slate-highlights,
   .slate-notes,
-  .slate-badges
-    padding: 120px 40px 20px
+  .slate-badges,
+  .slate-friends
+    padding: 120px 40px 20px !important
     border-radius: 0
     margin: 0
 
