--- a/app/views/search/_bible_list_item.html.haml
+++ b/app/views/search/_bible_list_item.html.haml
@@ -3,7 +3,7 @@
 %li.reference
   - if item.reference.usfm.present?
     %h3
-      = link_to "#{item.reference.human} (#{item.version.local_abbreviation.upcase || item.version.abbreviation.upcase})", bible_path(Reference.new(item.reference.usfm, version: item.version.id))
+      = link_to "#{item.reference.human} (#{item.version.local_abbreviation.upcase || item.version.abbreviation.upcase})", bible_path(Reference.new(item.reference.usfm.first, version: item.version.id))
 
   - if item.highlight.present? || item.content.present?
     %p
