Restyled friends moments. Updated friend help copy.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -505,27 +505,24 @@ body.transition .moment
   display: none
 
 .moment-fr-box
-  width: 50%
-  text-align: center
-  float: left
-  margin-bottom: 10px
+  display: inline-block
 
 .moment-fr-avatar
   box-shadow: 0 1px 2px #bbb
-  +border-radius(128px)
-  position: relative
-  z-index: 1
+  +border-radius(80px)
+  width: 80px
+  height: 80px
+  margin: 0 0 0 61px
+  border: 4px solid #fff
 
 .moment-fr-name
-  display: block
-  background-color: #EEEDEB
+  display: inline-block
   padding: 5px 8px 7px
-  margin: -5px auto 0
-  width: 128px
-  +border-radius(4px)
-  position: relative
-  z-index: 2
   line-height: 1.2em
+  letter-spacing: -.02em
+  font:
+    size: 1.6em
+    weight: normal
 
 .moment-fr-seemore
   display: block
