--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -105,10 +105,10 @@
 .moment-no-text,
 .moment-bdg-text,
 .moment-vid-text,
-.moment-sys-text
+.moment-sys-text,
+.moment-fr-text
   width: 70%
   line-height: 1.3em
-  min-height: 56px
 
 // !Bookmark moment
 
@@ -185,6 +185,12 @@
 
 .moment-bdg-info
   margin: 65px 0 0 0
+
+
+// !Friend moment
+
+.moment-fr-avatar
+  margin: 0 0 0 20px
 
 
 // !------------------------ Detail page -------------------------
