--- a/app/views/users/friends.html.haml
+++ b/app/views/users/friends.html.haml
@@ -15,7 +15,7 @@
         %span.friends-count-canhave
           You can have as many as 150
         %span.friends-count-help
-          Too many friends is bad for your health. Show some restraint, man!
+          Why only 150 friends? Unlike social networks, reading the Bible should lead to honest discussions with God and with friends and family who you trust the most.
 
         - # Web doesn't have a way to find friends at the moment
         - # apps only support uploading contact lists.
