--- a/app/views/users/delete_account.html.haml
+++ b/app/views/users/delete_account.html.haml
@@ -4,6 +4,8 @@
   = render partial: "widgets/settings"
 
 %article
+  = render partial: "users/mobile_menu"
+
   %p= t('users.delete account description')
   = form_tag user_path(@user), method: :delete do
     = render partial: "shared/form_errors", locals: {errors: @user.errors}
