Added mobile header titles for all profile settings pages.

--- a/app/views/users/delete_account.html.haml
+++ b/app/views/users/delete_account.html.haml
@@ -1,4 +1,7 @@
-- @title = "#{t('users.edit account_existence')} | #{@user.name || @user.username}"
+- @title = t('users.edit account_existence')
+
+- content_for :title do
+  = @title
 
 - content_for :sidebar do
   = render partial: "widgets/settings"
