--- a/app/views/users/email.html.haml
+++ b/app/views/users/email.html.haml
@@ -1,5 +1,12 @@
+- @title = t('users.edit email')
+
+- content_for :title do
+  = @title
+
 - content_for :sidebar do
   = render partial: "widgets/settings"
+
+
 
 
 %article
