--- a/app/views/users/password.html.haml
+++ b/app/views/users/password.html.haml
@@ -1,7 +1,10 @@
-- @title = "#{t('users.change my password')} | #{@user.name || @user.username}"
+- @title = t('users.edit password')
 
 - content_for :sidebar do
   = render partial: "widgets/settings"
+
+- content_for :title do
+  = @title
 
 
 %article
