--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,4 +1,7 @@
-- @title = "#{t('users.my profile')} | #{@user.name || @user.username}"
+- @title = t('users.edit profile')
+
+- content_for :title do
+  = @title
 
 - content_for :sidebar do
   = render partial: "widgets/settings"
