social layers scrollable for mobile, adjust no requests/notification layers display

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -131,6 +131,9 @@ article.social-requests ul
       width: 19px
       height: 9px
 
+    .list-item.none  
+      height: 40px
+
     .list-item
       height: 80px
       border-top: 1px solid #d4d4d4
