--- a/app/assets/stylesheets/mobile/_notifications.sass
+++ b/app/assets/stylesheets/mobile/_notifications.sass
@@ -15,6 +15,11 @@
 #header .notifications-btn.home-url
   display: block
 
+#header .header-popover ul
+  // default max-height is overridden by responsive height value set in page.js
+  max-height: 296px
+  overflow-x: auto
+  
 #header .friend-requests-btn
   background-position: 0px 9px
   left: 38px
