fix typo, adjust color, remove link

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -99,13 +99,19 @@ article.social-requests ul
       display: inline
       line-height: 12px
 
-    .text-link.wide
+    .text-link.wide,
+    .text-wide 
       width: 100%
       border-top: 1px solid #ceced0
       background: #eeedeb
       text-align: center
       display: block
       padding: 12px 0px
+
+    .text-wide 
+      font-size: 12px
+      line-height: 12px
+      font-weight: bold
 
     .text-link.wide:hover
       background: #f3f3f3
