--- a/app/assets/stylesheets/mobile/_tabs.sass
+++ b/app/assets/stylesheets/mobile/_tabs.sass
@@ -97,8 +97,28 @@
   margin-top: 40px !important
 
 h3.hd
-  padding-left: 21px
-  background: image-url("header_icon_gear.png") no-repeat left center  
+  background: #E1E1E1 image-url("mobile/dropdown-arrow.png") no-repeat 96% center
+  border-radius: 5px
+  padding: 10px 15px 11px
 
 .mobile-menu-wrap
   display: none
+  margin: -20px 0 20px
+  border: 1px solid #e1e1e1
+
+#main article
+
+  .tabs
+    margin: 0
+    padding: 0
+    background: none
+
+    a
+      background: none #fff
+      +box-shadow(none)
+      text-shadow: none
+      border: none
+      +border-radius(0)
+      font:
+        size: 15px
+        weight: normal
