Flip titles for settings pages, tweak margins so open/close animation doesn't look funky.

--- a/app/assets/stylesheets/mobile/_tabs.sass
+++ b/app/assets/stylesheets/mobile/_tabs.sass
@@ -97,14 +97,23 @@
   margin-top: 40px !important
 
 h3.hd
+  margin: 0 !important
   background: #E1E1E1 image-url("mobile/dropdown-arrow.png") no-repeat 96% center
   border-radius: 5px
   padding: 10px 15px 11px
 
+// Menu is open, don't round the bottom of the heading.
+h3.hd.open
+  border-radius: 0
+  border-top-left-radius: 5px
+  border-top-right-radius: 5px
+
 .mobile-menu-wrap
   display: none
-  margin: -20px 0 20px
   border: 1px solid #e1e1e1
+
+hr.menu-separator
+  border: 1px solid transparent
 
 #main article
 
