--- a/app/views/users/password.html.haml
+++ b/app/views/users/password.html.haml
@@ -1,14 +1,13 @@
 - @title = t('users.edit password')
 
+- content_for :title do
+  = t('users.settings')
+
 - content_for :sidebar do
   = render partial: "widgets/settings"
 
-- content_for :title do
-  = @title
-
-
 %article
-  = render partial: "users/mobile_menu"
+  = render partial: "users/mobile_menu", locals: {selected: :password}
 
   = form_for :user, url: update_password_user_path(current_user), method: :put do |f|
     = render partial: "shared/form_errors", locals: {errors: @user.errors, heading: t("users.edit password errors")}
