--- a/app/views/users/delete_account.html.haml
+++ b/app/views/users/delete_account.html.haml
@@ -1,13 +1,13 @@
 - @title = t('users.edit account_existence')
 
 - content_for :title do
-  = @title
+  = t('users.settings')
 
 - content_for :sidebar do
   = render partial: "widgets/settings"
 
 %article
-  = render partial: "users/mobile_menu"
+  = render partial: "users/mobile_menu", locals: {selected: :account}
 
   %p= t('users.delete account description')
   = form_tag user_path(@user), method: :delete do
