--- a/app/views/users/devices.html.haml
+++ b/app/views/users/devices.html.haml
@@ -1,14 +1,14 @@
 - @title = t('users.edit devices')
 
 - content_for :title do
-  = @title
+  = t('users.settings')
 
 - content_for :sidebar do
   = render partial: "widgets/settings"
 
 
 %article
-  = render partial: "users/mobile_menu"
+  = render partial: "users/mobile_menu", locals: {selected: :devices}
 
   - if @results
     = render partial: "shared/form_errors", locals: {errors: @results.errors }
