--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,13 +1,13 @@
 - @title = t('users.edit profile')
 
 - content_for :title do
-  = @title
+  = t('users.settings')
 
 - content_for :sidebar do
   = render partial: "widgets/settings"
 
 %article
-  = render partial: "users/mobile_menu"
+  = render partial: "users/mobile_menu", locals: {selected: :edit}
 
   = form_for @user do |f|
     - unless @user.errors.blank?
