--- a/app/views/users/email.html.haml
+++ b/app/views/users/email.html.haml
@@ -1,16 +1,13 @@
 - @title = t('users.edit email')
 
 - content_for :title do
-  = @title
+  = t('users.settings')
 
 - content_for :sidebar do
   = render partial: "widgets/settings"
 
-
-
-
 %article
-  = render partial: "users/mobile_menu"
+  = render partial: "users/mobile_menu", locals: {selected: :email}
   
   - if @results and @results.valid?
     %p.confirmation-message
