--- a/app/views/users/notifications.html.haml
+++ b/app/views/users/notifications.html.haml
@@ -1,13 +1,14 @@
 - @title = t('users.edit notifications')
 
 - content_for :title do
-  = @title
+  = t('users.settings')
 
 - # because page can be accessed while logged in or logged out (with token) we use
 - # current_user or fallback to params[:id]
 
 %article
-  = render partial: "users/mobile_menu"
+  = render partial: "users/mobile_menu", locals: {selected: :notifications}
+
   = form_tag update_notifications_user_path( current_user || params[:id] ,token: params[:token]), method: :put do |n|
     - unless @settings.errors.blank?
       .form_errors
