--- a/app/views/highlights/_colors.html.haml
+++ b/app/views/highlights/_colors.html.haml
@@ -1,2 +1,3 @@
-- colors.each_with_index do |c,i| #room for 10 highlights in menu, 10th will be hidden by JS if clear is there
-  %button{type:"submit", name:"highlight[color]", value: c, class: "color", id: "highlight_#{i}", href: "#", style: "background-color:##{c}"}
+- unless colors.nil?
+  - colors.slice(0,10).each_with_index do |c,i| #room for 10 highlights in menu, 10th will be hidden by JS if clear is there
+    %button{type:"submit", name:"highlight[color]", value: c, class: "color", id: "highlight_#{i}", href: "#", style: "background-color:##{c}"}
